fixed header font sizes on mobile

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -17,7 +17,7 @@
     }
     h1.subheader {
         letter-spacing: 3.3px;
-        font-size: 13.1px;
+        font-size: 25px;
         margin-bottom: 0;
     }
     .headline {
